# fastomop-atlas-agent

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml  run_all_challenges.py  run_single_challenge.py  run_vignettes.py
src/atlas_agent/: __init__.py  config.py  main.py  model_factory.py
src/atlas_agent/agents/: __init__.py  clinical_parser.py  concept_finder.py  corrector.py  orchestrator.py  relationship_reasoner.py  set_builder.py  validator.py
src/atlas_agent/models/: __init__.py  atlas_json.py  concept_set.py  entities.py
src/atlas_agent/tools/: __init__.py  atlas_export.py  mcp_vocab_search.py  milvus_search.py  webapi_search.py
tests/: test_agent.py  test_direct_ollama.py  test_ollama_json.py  test_ollama_plain.py  test_parser_simple.py  test_pipeline_focused.py  test_quick_fixes.py  test_refined_reasoning.py  test_sle_challenge.py  test_sle_streaming.py
